--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .post-separator {
@@ -10,10 +11,21 @@
 
 /* POSTS */
 
+.blog-post {
+  position: relative;
+}
+
 .featured-img {
   width: 100%;
+  min-height: 50vh;
 }
 
 .post-title {
-  margin: 1rem 0;
+  position: absolute;
+  top: 0;
+  padding: 2rem;
+  color: white;
+  text-align: center;
+  text-transform: uppercase;
+  background: rgba(0, 0, 0, .3);
 }
