--- a/index.css
+++ b/index.css
@@ -72,3 +72,19 @@
   width: 100%;
   height: auto;
 }
+
+.wp-block-list {
+  list-style-type: square;
+  list-style-position: inside;
+  margin-bottom: 1rem;
+}
+
+.wp-block-list ul {
+  margin-left: 1.5rem;
+  margin-bottom: .25rem;
+}
+
+.wp-block-list li {
+  margin-bottom: .25rem;
+  font-size: .9rem;
+}
