--- a/index.css
+++ b/index.css
@@ -60,6 +60,13 @@
   margin-bottom: 1rem;
 }
 
+.post-content h2 {
+  font-size: 1.75rem;
+  font-weight: 500;
+  text-transform: uppercase;
+  margin-bottom: 1rem;
+}
+
 /* STYLES FOR WORDPRESS CLASSES */
 
 .wp-block-code {
