styled .blog-posts-gallery. made it responsive. styled .blog-post-thumbnail, .thumbnail-img, .thumbnail-title

--- a/index.css
+++ b/index.css
@@ -14,10 +14,32 @@
 .blog-posts-gallery {
   display: flex;
   flex-wrap: wrap;
+  background: black;
+  margin-top: 1rem;
+}
+
+.blog-post-thumbnail {
+  position: relative;
+  min-height: 33vh;
 }
 
 .thumbnail-img {
   width: 100%;
+  min-height: 33vh;
+  object-fit: cover;
+}
+
+.thumbnail-title {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  font-size: 1.25rem;
+  font-weight: 500;
+  color: white;
+  padding: 1rem;
+  text-align: center;
+  text-transform: uppercase;
+  background: rgba(0, 0, 0, .3);
 }
 
 /* POSTS */
